--- a/env.example
+++ b/env.example
@@ -4,5 +4,6 @@ SSL_KEY_PATH=./certs/localhost-key.pem
 SSL_CERT_PATH=./certs/localhost.pem
 SPOTIFY_CLIENT_ID=your_client_id
 SPOTIFY_CLIENT_SECRET=your_client_secret
-SPOTIFY_REDIRECT_URI=https://localhost:3000/auth/spotify/callback
+# Used for one-time local OAuth to obtain your refresh token.
+SPOTIFY_REDIRECT_URI=http://127.0.0.1:3000/auth/spotify/callback
 SPOTIFY_REFRESH_TOKEN=your_refresh_token
